+ fixed overflow

--- a/src/views/DungeonView.scss
+++ b/src/views/DungeonView.scss
@@ -23,13 +23,6 @@ $ani-duration: .5s;
     transform: perspective(800px) rotateX(20deg) translate3d(0, 0, -200px);
   }
 
-  .inner {
-    position: absolute;
-    overflow: hidden;
-    width: 100%;
-    height: 100%;
-  }
-
   .rooms {
     position: absolute;
     width: 100%;
