--- a/src/views/GameBoardView.scss
+++ b/src/views/GameBoardView.scss
@@ -2,6 +2,7 @@
   display: flex;
 
   position: absolute;
+  overflow: hidden;
   z-index: -1;
   top: 0;
   width: 100%;
